--- a/lib/tfh-sqlite/.vscode/launch.json
+++ b/lib/tfh-sqlite/.vscode/launch.json
@@ -5,18 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch debug with compile (cpp)",
-      "type": "hxcpp",
-      "request": "launch",
-      "cwd": "${workspaceFolder}",
-      "program": "${workspaceFolder}/bin/Main-debug.exe",
-      "preLaunchTask": {
-        "type": "haxe",
-        "args": "active configuration"
-      }
-    },
-    {
-      "name": "HashLink/JIT",
+      "name": "HashLink/JIT build & debug",
       "type": "hl",
       "hxml": "build-hl.hxml",
       "request": "launch",
@@ -27,14 +16,34 @@
       }
     },
     {
-      "name": "Haxe Interpreter",
+      "name": "C++ build & debug",
+      "type": "hxcpp",
+      "hxml": "build-cpp.hxml",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "program": "${workspaceFolder}/bin/Main-debug.exe",
+      "preLaunchTask": {
+        "type": "haxe",
+        "args": "active configuration"
+      }
+    },
+    {
+      "name": "C++ debug",
+      "type": "hxcpp",
+      "hxml": "build-cpp.hxml",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "program": "${workspaceFolder}/bin/Main-debug.exe"
+    },
+    {
+      "name": "Build",
       "type": "haxe-eval",
       "request": "launch"
     },
     {
       "type": "pwa-node",
       "request": "launch",
-      "name": "Decode js",
+      "name": "Decode.js",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}\\TFHres_db.js",
       "args": ["decode"]
@@ -42,7 +51,7 @@
     {
       "type": "pwa-node",
       "request": "launch",
-      "name": "Encode js",
+      "name": "Encode.js",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}\\TFHres_db.js",
       "args": ["encode"]
