--- a/Localization-developer-tool/.vscode/extensions.json
+++ b/Localization-developer-tool/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "nadako.vshaxe",
-    "vshaxe.hxcpp-debugger"
+    "vshaxe.hxcpp-debugger",
+    "HaxeFoundation.haxe-hl"
   ]
 }
